phase8/06-test-pod-interne.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-interne
  namespace: demo-app
  labels: { app: test-pod-interne, owner: fedi-sayadi, environment: dev }
spec:
  containers:
    - name: busybox
      image: busybox:1.36
      command: ["sleep", "3600"]
      securityContext: { runAsNonRoot: true, runAsUser: 100, readOnlyRootFilesystem: true }
      resources: { requests: { cpu: "50m", memory: "32Mi" }, limits: { cpu: "100m", memory: "64Mi" } }
      livenessProbe: { exec: { command: ["true"] }, initialDelaySeconds: 5, periodSeconds: 30 }
      readinessProbe: { exec: { command: ["true"] }, initialDelaySeconds: 2, periodSeconds: 10 }
