phase8/04-allow-egress-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-nginx
  namespace: demo-app
spec:
  podSelector: {}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels: { app: nginx-demo }
      ports: [{ protocol: TCP, port: 80 }]
